new paragraph was added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			in October 1980. Immensely popular from its original release to the present day, Pac-Man is considered one of the classics of the medium, and an icon of 1980s popular culture. Upon its release, the game—and, subsequently, Pac-Man derivatives—became
 			a social phenomenon that yielded high sales of merchandise and inspired a legacy in other media, such as the Pac-Man animated television series and the top-ten Buckner and Garcia hit single "Pac-Man Fever". Pac-Man was popular in the 1980s and 1990s
 			and is still played in the 2010s.</p>
+			<p>This paragraph was added</p>
 		<p>When Pac-Man was released, the most popular arcade video games were space shooters—in particular, Space Invaders and Asteroids. The most visible minority were sports games that were mostly derivatives of Pong. Pac-Man succeeded by creating a new genre.
 			Pac-Man is often credited with being a landmark in video game history and is among the most famous arcade games of all time. It is also one of the highest-grossing video games of all time, having generated more than $2.5 billion in quarters by the
 			1990s.</p>
